# morganvuoksi

./: .env.template  .gitignore  ADAPTIVE_LEARNING.md  API_CREDENTIALS.md  ARBITRAGE_DETECTION.md  BACKTESTING.md  BLOOMBERG_DESIGN_VERIFICATION.md  BLOOMBERG_TERMINAL_GUIDE.md  BLOOMBERG_TERMINAL_IMPLEMENTATION.md  BLOOMBERG_TERMINAL_IMPLEMENTATION_COMPLETE.md  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  CMakeLists.txt  DATA_INFRASTRUCTURE.md  DATA_MANAGEMENT.md  DEMO_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CONFIRMATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  Dockerfile  Dockerfile.production  ELITE_TERMINAL_SUMMARY.md  EXECUTION_ALGORITHMS.md  FINAL_PROJECT_STATUS.md  MARKET_MAKING.md  ML_ENHANCEMENTS.md  ML_MODELS.md  MONITORING.md  Makefile  OPENAI_INTEGRATION.md  PORTFOLIO_OPTIMIZATION.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_READY_REPORT.md  PROJECT_CLEANUP_COMPLETE.md  PROJECT_OPERABILITY_REPORT.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  RISK_MANAGEMENT.md  (+46 more)
.streamlit/: config.toml  secrets.toml.example
backend/: main.py
cli/: quantlab.py
config/: base.yaml  config.yaml
dashboard/: README.md  terminal-simple.py  terminal.py
dashboards/: streamlit_dashboard.py
database/: models.py
frontend/: package-lock.json  package.json  tailwind.config.ts
fundamentals/: comps.py  dcf.py  lbo.py
notebooks/: 01_data_exploration.ipynb
provided/: tailwind.config.ts
rl/: agent_integration.py
scripts/: start_api.sh
src/: config.py  main.py  scheduler.py
tests/: conftest.py  test_alt_data.py  test_backtest_validation.py  test_data_fetcher.py  (+15 more)
(+86 files in other folders)
